<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_ingredient"
        style="@style/IngredientHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        tools:text="@string/ingredient" />

    <TextView
        android:id="@+id/tv_measure"
        style="@style/IngredientSubheaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_ingredient"
        android:layout_marginBottom="8dp"
        tools:text="@string/measure" />

    <TextView
        android:id="@+id/tv_quantity"
        style="@style/IngredientSubheaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_measure"
        tools:text="@string/quantity" />
</RelativeLayout>