<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_recipe"
            style="@style/RecipeTextStyle.Widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/recipe_title" />

        <TextView
            android:id="@+id/tv_ingredients"
            style="@style/IngredientHeaderStyle.Widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/ingredients" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_header"
        android:background="@color/colorDivider" />

    <ListView
        android:id="@+id/lv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fl_divider"
        android:divider="@color/colorDivider"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@+id/tv_no_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/widget_empty_view"
        android:visibility="gone" />

</RelativeLayout>